Fix animation overflow responsible for huge possible dezoom  on some browser.
https://twitter.com/Zoontek/status/448007509098643456

--- a/src/assets/_styles/partials/_home.scss
+++ b/src/assets/_styles/partials/_home.scss
@@ -21,6 +21,8 @@
   border: solid #e6e6e6;
   border-width: 1px 0;
   background: #f9f9f9;
+
+  overflow-x: hidden; // for .Animated child
 }
 
   .mx-FeaturedLogos .grid__cell {
